deploy/k8s/crawl-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawl-service-deployment
  namespace: ingress-nginx
  labels:
    app: crawl-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawl-service
  template:
    metadata:
      labels:
        app: crawl-service
    spec:
      containers:
        - name: crawldata
          image: 281901/crawldata:dev
          stdin: true
          tty: true
          imagePullPolicy: Always
