deploy/k8s/movie-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-api-deployment
  namespace: ingress-nginx
  labels:
    app: movie-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      labels:
        app: movie-api
    spec:
      containers:
        - name: movieapi
          image: 281901/movie.api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
---
# Uncomment when in local k8s
# apiVersion: v1
# kind: Service
# metadata:
#   name: movie-api-service
# spec:
#   type: NodePort
#   selector:
#     app: movie-api
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#       nodePort: 31000

apiVersion: v1
kind: Service
metadata:
  name: movie-api-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: movie-api
  ports:
    - protocol: TCP
      port: 80
