deploy/k8s/moviedb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moviedb-sfs
  labels:
    app: moviedb
spec:
  serviceName: moviedb-service
  replicas: 1
  selector:
    matchLabels:
      app: moviedb
  template:
    metadata:
      labels:
        app: moviedb
        environment: test
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: manual
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: moviedb-service
  labels:
    name: moviedb-service
spec:
  selector:
    app: moviedb
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
