deploy/k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api-deployment
  namespace: ingress-nginx
  labels:
    app: payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
        - name: paymentapi
          image: 281901/payment.api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: payment-api
  ports:
    - protocol: TCP
      port: 80
