deploy/k8s/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sfs
  namespace: development
  labels:
    app: postgres
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
              name: postgresql-port
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "test-pgdata"
  volumeClaimTemplates:
    - metadata:
        name: test-pgdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: development
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgresql-port
  clusterIP: None
