deploy/k8s/apigw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-deployment
  labels:
    app: apigw
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigw
  template:
    metadata:
      labels:
        app: apigw
    spec:
      containers:
        - name: apigw
          image: 281901/ocelotapigw:dev
          volumeMounts:
            - name: ocelot-config-volume
              mountPath: /app/publish
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      volumes:
        - name: ocelot-config-volume
          configMap:
            name: ocelot-config
---
apiVersion: v1
kind: Service
metadata:
  name: apigw-service
spec:
  selector:
    app: apigw
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigw-service-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/rewrite-target: /identity/$2
spec:
  tls:
    - hosts:
        - aks.20.44.235.37.nip.io # update IP address here
      secretName: app-web-cert
  rules:
    - host: aks.20.44.235.37.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: apigw-service
                port:
                  number: 80
