deploy/k8s/identity-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api-deployment
  labels:
    app: identity-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
        - name: identityapi
          image: 281901/identity.api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: identity-port
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.1"
            limits:
              memory: "200Mi"
              cpu: "0.3"
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: identity-api-service
#   labels:
#     app: identity-api-service
# spec:
#   selector:
#     app: identity-api
#   ports:
#     - protocol: TCP
#       port: 5002
#       targetPort: 80
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: identity-api-service
  namespace: development
  labels:
    app: identity-api
spec:
  type: ClusterIP
  selector:
    app: identity-api
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-service-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /identity(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-api-service
                port:
                  number: 80
